# Cilantro

./: CMakeLists.txt
example/: main
example/c_example/: build.sh  example  main.c  nobuild.sh
example/rexample/: Cargo.toml  build.rs
example/rexample/.cargo/: config.toml
example/rexample/src/: main.rs
src/: library.cpp  library.h  wrapper.cpp  wrapper.h
